--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,36 @@
 .app-container {
   position: relative;
+  min-height: 100vh;
   width: 100vw;
-  height: 100vh;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .background {
-  background-image: url("./assets/background.png");
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
   width: 100%;
   height: 100%;
+  background-image: url("./assets/background.png");
   background-size: cover;
   background-position: center;
   filter: brightness(40%);
+}
+
+.cards-container {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  justify-content: center;
+  align-content: center;
+  gap: 20px;
+  padding: 40px;
+  width: 100%;
+  max-width: 1200px;
+  z-index: 1;
+  box-sizing: border-box;
 }
