--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,10 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  background-image: url("./assets/background.png");
   background-size: cover;
   background-position: center;
   filter: brightness(40%);
+  transition: background-image 1s ease-in-out;
 }
 
 .cards-container {
