--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Martian+Mono:wght@400;600&display=swap");
+
 :root {
-  /*font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;*/
+  font-family: "Martian Mono", monospace;
 }
 
 * {
