--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   position: relative;
   min-height: 100vh;
   width: 100vw;
-  overflow: auto;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
